--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,6 +6,9 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/data-grid": "^4.0.0-alpha.29",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.25.0",
     "bootstrap": "^4.6.0",
     "history": "^5.2.0",
@@ -19,6 +22,7 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "recharts": "^2.0.9",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
