--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,26 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/data-grid": "^4.0.0-alpha.29",
     "@material-ui/icons": "^4.11.2",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
     "bootstrap": "^4.6.0",
+    "concurrently": "^7.0.0",
     "history": "^5.2.0",
+    "ra-data-simple-rest": "^3.19.8",
     "react": "^17.0.2",
+    "react-admin": "^3.19.8",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-validation": "^3.0.7",
+    "recharts": "^2.0.9",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
-    "recharts": "^2.0.9",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
