--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-table/core": "^4.3.31",
     "@material-ui/core": "^4.11.4",
     "@material-ui/data-grid": "^4.0.0-alpha.29",
     "@material-ui/icons": "^4.11.2",
@@ -13,6 +14,7 @@
     "bootstrap": "^4.6.0",
     "concurrently": "^7.0.0",
     "history": "^5.2.0",
+    "material-table": "^1.69.3",
     "ra-data-simple-rest": "^3.19.8",
     "react": "^17.0.2",
     "react-admin": "^3.19.8",
